# CapableRobot_USBHub_Driver

./: 50-capablerobot-usbhub.rules  CODE_OF_CONDUCT.md  LICENSE  README.md  micropython.py  pyproject.toml  requirements.txt
capablerobot_usbhub/: __init__.py  config.py  console.py  device.py  gpio.py  i2c.py  main.py  power.py  registers.py  registers_gpio.py  registers_port.py  spi.py  util.py
capablerobot_usbhub/formats/: usb4715.ksy  usb4715_main.ksy  usb4715_mcu.ksy  usb4715_port.ksy
capablerobot_usbhub/registers/: __init__.py  main.py
capablerobot_usbhub/windows/: README.md
examples/: gpio.py  i2c_current.py  i2c_oled.py  power.py  registers.py  status.py
formats/: usb4715.ksy  usb4715_gpio.ksy
