[tool.poetry]
name = "capablerobot_usbhub"
version = "0.1.0"
description = "Host side driver for the Capable Robot Programmable USB Hub"
authors = ["Chris Osterwood <osterwood@capablerobot.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyusb = "^1.0.2"
construct = "^2.9.51"
pyyaml = "^5.3"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
usbhub = "capablerobot_usbhub.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
